--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,10 +1,24 @@
 FROM python:3.11-alpine
 
+
 WORKDIR /app
 
+# 安装依赖
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# 设置时区 - 使用Python方式设置而不是apt-get
+ENV TZ=Asia/Shanghai
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+# 复制应用代码
 COPY . .
 
-CMD ["python", "stock_data_fetcher.py"]
+# 设置环境变量
+ENV PYTHONUNBUFFERED=1
+
+# 暴露端口
+EXPOSE 5000
+
+# 运行应用
+CMD ["python", "start.py"]
