--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-
 services:
   timescaledb:
     image: timescale/timescaledb:latest-pg14
@@ -22,6 +21,8 @@ services:
     container_name: stock_backend
     depends_on:
       - timescaledb
+    ports:
+      - "8000:5000"  # 暴露API服务端口
     environment:
       - DB_HOST=timescaledb
       - DB_USER=stockuser
