--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,18 @@ services:
     networks:
       - stock-network
 
+  redis:
+    image: redis:alpine
+    container_name: stock_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: unless-stopped
+    networks:
+      - stock-network
+    command: redis-server --appendonly yes
+
   stock-backend:
     build:
       context: ./backend
@@ -21,6 +33,7 @@ services:
     container_name: stock_backend
     depends_on:
       - timescaledb
+      - redis
     ports:
       - "8000:5000"  # 暴露API服务端口
     environment:
@@ -28,6 +41,9 @@ services:
       - DB_USER=stockuser
       - DB_PASSWORD=stockpassword
       - DB_NAME=stockdb
+      # Redis配置
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
       # 使用特殊的Docker DNS名称连接宿主机上的FutuOpenD
       - FUTU_HOST=host.docker.internal
       - FUTU_PORT=${FUTU_PORT:-11111}
@@ -45,3 +61,4 @@ networks:
 
 volumes:
   timescaledb_data:
+  redis_data:
