--- a/.env
+++ b/.env
@@ -5,9 +5,17 @@ DB_HOST=timescaledb
 DB_PORT=5432
 DB_NAME=stockdb
 
+
+# Redis配置
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 # Futu API配置
 FUTU_HOST=host.docker.internal
 FUTU_PORT=11111
 
-# 要跟踪的股票列表(用逗号分隔)
-STOCKS_TO_TRACK=US.AAPL,US.MSFT,HK.00700
+# API鉴权配置 - 生产环境请使用强随机密钥
+TRADING_API_KEY=your-secret-api-key
+
+# 允许的域名列表（逗号分隔）
+ALLOWED_ORIGINS=http://yourdomain.com,https://yourdomain.com,http://localhost
