修改前端换成 next

--- a/.env
+++ b/.env
@@ -19,3 +19,6 @@ TRADING_API_KEY=your-secret-api-key
 
 # 允许的域名列表（逗号分隔）
 ALLOWED_ORIGINS=http://yourdomain.com,https://yourdomain.com,http://localhost
+
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
+NEXT_PUBLIC_API_KEY=your-secret-api-key
