--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "idf.pythonInstallPath": "/Library/Frameworks/Python.framework/Versions/3.11/bin/python3"
+    "idf.pythonInstallPath": "/Library/Frameworks/Python.framework/Versions/3.11/bin/python3",
+    "css.lint.unknownAtRules": "ignore"
 }
