--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.2.6",
     "@tanstack/react-query": "^5.13.4",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
