--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 
 # Futu API配置
-FUTU_HOST=host.docker.internal
+#FUTU_HOST=host.docker.internal #172.17.0.1
+FUTU_HOST=172.17.0.1
 FUTU_PORT=11111
 
 # API鉴权配置 - 生产环境请使用强随机密钥
