--- a/.env
+++ b/.env
@@ -22,5 +22,5 @@ TRADING_API_KEY=your-secret-api-key
 ALLOWED_ORIGINS=http://stock.superaihub.com,https://stock.superaihub.com
 
 #NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
-NEXT_PUBLIC_API_BASE_URL=http://stock-backend:5000/api
+NEXT_PUBLIC_API_BASE_URL=https://stock.superaihub.com/api
 NEXT_PUBLIC_API_KEY=your-secret-api-key
