--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,28 +62,46 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: stock_frontend
-    depends_on:
-      - stock-backend
-    ports:
-      - "3001:3000"
-    # 添加环境变量文件
-    env_file:
-      - ./.env
-    environment:
-      # 在Docker环境中使用服务名
-      #- NEXT_PUBLIC_API_BASE_URL=https://stock.superaihub.com/api
-      # 使用相对路径，这样请求会自动发送到当前域名下的 /api 路径
-      - NEXT_PUBLIC_API_BASE_URL=/api
-      - NEXT_PUBLIC_API_KEY=${TRADING_API_KEY:-your-secret-api-key}
-      - NODE_ENV=production
+  # 前端服务，在新加坡的服务器运行，不要在广州的服务器运行
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile
+  #   container_name: stock_frontend
+  #   depends_on:
+  #     - stock-backend
+  #   ports:
+  #     - "3001:3000"
+  #   # 添加环境变量文件
+  #   env_file:
+  #     - ./.env
+  #   environment:
+  #     # 在Docker环境中使用服务名
+  #     #- NEXT_PUBLIC_API_BASE_URL=https://stock.superaihub.com/api
+  #     # 使用相对路径，这样请求会自动发送到当前域名下的 /api 路径
+  #     - NEXT_PUBLIC_API_BASE_URL=/api
+  #     - NEXT_PUBLIC_API_KEY=${TRADING_API_KEY:-your-secret-api-key}
+  #     - NODE_ENV=production
+  #   restart: unless-stopped
+  #   networks:
+  #     - stock-network
+  
+  # 新增 Caddy 服务，替代 Nginx，在广州的服务器运行，不要在新加坡的服务器运行
+  caddy:
+    image: caddy:2-alpine
+    container_name: stock_caddy
     restart: unless-stopped
+    ports:
+      - "18443:18443"  # HTTPS 端口
+    volumes:
+      - ./caddy/config/Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data   # 存储证书和其他数据
+      - caddy_config:/config  # 存储配置
     networks:
       - stock-network
+    # 确保能解析到内部主机名 (backend)
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 networks:
   stock-network:
@@ -92,3 +110,5 @@ networks:
 volumes:
   timescaledb_data:
   redis_data:
+  caddy_data:
+  caddy_config:
