--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   timescaledb:
     image: timescale/timescaledb:latest-pg14
+    command: postgres -c max_connections=200  # 增加最大连接数
     container_name: stock_timescaledb
     ports:
       - "5432:5432"
