--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,7 +54,7 @@ services:
       - FUTU_PORT=${FUTU_PORT:-11111}
       # 显式添加API密钥和CORS设置
       - TRADING_API_KEY=${TRADING_API_KEY:-your-secret-api-key}
-      - ALLOWED_ORIGINS=http://stock.superaihub.com,https://stock.superaihub.com
+      - ALLOWED_ORIGINS=http://stock.superaihub.com,https://stock.superaihub.com,43.134.0.68
     volumes:
       - ./Backend:/app
     networks:
