--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ TRADING_API_KEY=your-secret-api-key
 ALLOWED_ORIGINS=http://stock.superaihub.com,https://stock.superaihub.com,43.134.0.68,http://43.138.154.198:3001/,*
 
 #NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
-NEXT_PUBLIC_API_BASE_URL=https://43.138.154.198:18000/api
+NEXT_PUBLIC_API_BASE_URL=/api
 #NEXT_PUBLIC_API_BASE_URL=/api/
 NEXT_PUBLIC_API_KEY=your-secret-api-key
 
