api add allow origin

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ FUTU_PORT=11111
 TRADING_API_KEY=your-secret-api-key
 
 # 允许的域名列表（逗号分隔）
-#ALLOWED_ORIGINS=http://stock.superaihub.com,https://stock.superaihub.com,43.134.0.68,http://43.138.154.198:3001/,*
+ALLOWED_ORIGINS=http://43.138.154.198:3001/,https://43.138.154.198:3001/,*
 
 #NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api
 NEXT_PUBLIC_API_BASE_URL=https://43.138.154.198:18000/api
